--- a/css/styles.css
+++ b/css/styles.css
@@ -495,21 +495,20 @@ img {
   margin-bottom: 16px;
 }
 
+.button-footer {
+  border-radius: 4px;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  background: #4d5ae5;
+}
+
 .input-email-footer {
   border: 1px solid #fff;
   border-radius: 4px;
   width: 264px;
   height: 40px;
-  padding-left: 16px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-}
-
-.button-footer {
-  border-radius: 4px;
-  padding: 8px 24px;
-  width: 165px;
-  height: 40px;
-  background: #4d5ae5;
 }
 
 /*modal*/
