--- a/css/styles.css
+++ b/css/styles.css
@@ -496,14 +496,19 @@ img {
 }
 
 .button-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 4px;
   padding: 8px 24px;
   min-width: 165px;
   height: 40px;
   background: #4d5ae5;
+  border: none;
 }
 
 .input-email-footer {
+  background-color: transparent;
   border: 1px solid #fff;
   border-radius: 4px;
   width: 264px;
