--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,13 @@ img {
   height: 40px;
   background: #4d5ae5;
   border: none;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
 }
 
 .input-email-footer {
@@ -518,13 +525,6 @@ img {
   width: 264px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-}
-
-.input-email-footer::placeholder {
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  color: #fff;
 }
 
 /*modal*/
