--- a/css/styles.css
+++ b/css/styles.css
@@ -526,10 +526,16 @@ img {
   width: 264px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
 }
 
 .icon-frame {
   margin-left: 16px;
+  fill: white;
 }
 
 /*modal*/
