--- a/css/styles.css
+++ b/css/styles.css
@@ -517,6 +517,13 @@ img {
   text-align: center;
   color: #fff;
   cursor: pointer;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-footer:hover,
+.button-footer:focus {
+  background-color: #31d0aa;
 }
 
 .input-email-footer {
@@ -533,11 +540,17 @@ img {
   color: #fff;
 
   padding-left: 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-frame {
   margin-left: 16px;
   fill: white;
+}
+
+.input-email-footer:hover,
+.input-email-footer:focus {
+  border-color: #31d0aa;
 }
 
 /*modal*/
