--- a/css/styles.css
+++ b/css/styles.css
@@ -565,10 +565,9 @@ img {
 
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
-
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: auto;
+  opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -578,7 +577,7 @@ img {
 }
 
 .modal {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -592,7 +591,17 @@ img {
   border-radius: 4px;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  padding: 24px;
 }
 .backdrop:not(.is-open) .modal {
   transform: translate(-50%, -100%);
+}
+
+.btn-modal {
+  height: 24px;
+  width: 24px;
+  position: absolute;
+  top: 24;
+  right: 24;
 }
