--- a/css/styles.css
+++ b/css/styles.css
@@ -577,7 +577,7 @@ img {
 }
 
 .modal {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -604,4 +604,5 @@ img {
   position: absolute;
   top: 24px;
   right: 24px;
+  border-radius: 4px;
 }
