--- a/css/styles.css
+++ b/css/styles.css
@@ -581,10 +581,8 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   width: 408px;
   min-height: 584px;
-
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
@@ -592,7 +590,7 @@ img {
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
 }
 .backdrop:not(.is-open) .modal {
   transform: translate(-50%, -100%);
@@ -604,5 +602,34 @@ img {
   position: absolute;
   top: 24px;
   right: 24px;
-  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+}
+
+.icon-modal-close {
+  width: 8px;
+  height: 8px;
+  stroke: black;
+}
+
+.title-model {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+
+.title-model {
+  width: 360px;
 }
