--- a/css/styles.css
+++ b/css/styles.css
@@ -619,6 +619,7 @@ img {
   width: 8px;
   height: 8px;
   stroke: black;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title-model {
