--- a/css/styles.css
+++ b/css/styles.css
@@ -566,14 +566,15 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: auto;
-  opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: all;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
