--- a/css/styles.css
+++ b/css/styles.css
@@ -648,4 +648,27 @@ img {
   margin-bottom: 16px;
 }
 .form-contacts {
+  margin-bottom: 8px;
+}
+.label-form {
+  display: block;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.input-form {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+}
+
+.textarea-form {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 120px;
 }
