--- a/css/styles.css
+++ b/css/styles.css
@@ -615,14 +615,15 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-modal:hover,
 .btn-modal:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
 
 /*.icon-modal-close:hover,
@@ -659,6 +660,8 @@ img {
 }
 
 .input-form {
+  margin-bottom: 4px;
+  line-height: 1.17;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
