--- a/css/styles.css
+++ b/css/styles.css
@@ -668,4 +668,22 @@ img {
   border-radius: 4px;
   width: 100%;
   height: 120px;
+  resize: none;
+}
+
+.btn-form-cobmit {
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  cursor: pointer;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
 }
