--- a/css/styles.css
+++ b/css/styles.css
@@ -672,7 +672,17 @@ img {
   resize: none;
 }
 
+.label-chekbox {
+  width: 360px;
+  height: 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
 .btn-form-cobmit {
+  border: none;
   border-radius: 4px;
   padding: 16px 32px;
   min-width: 169px;
@@ -687,12 +697,4 @@ img {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
-}
-.label-chekbox {
-  width: 360px;
-  height: 16px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
 }
