--- a/css/styles.css
+++ b/css/styles.css
@@ -608,9 +608,9 @@ img {
   background: transparent;
 
   border-radius: 50%;
-  /* display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center;*/
+  align-items: center;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
@@ -697,4 +697,8 @@ img {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
