--- a/css/styles.css
+++ b/css/styles.css
@@ -662,6 +662,16 @@ img {
   width: 100%;
   height: 40px;
   background-color: transparent;
+  padding-left: 38px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-form:focus {
+  border-color: #4d5ae5;
+}
+
+.icons-form {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .textarea-form {
