--- a/css/styles.css
+++ b/css/styles.css
@@ -663,7 +663,7 @@ img {
   height: 40px;
   background-color: transparent;
   padding-left: 38px;
-  outline: none;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-form:focus {
@@ -725,6 +725,7 @@ img {
 .input-svg-form {
   fill: #2e2f42;
   position: relative;
+  margin-bottom: 16px;
 }
 
 .input-svg-form svg {
