--- a/css/styles.css
+++ b/css/styles.css
@@ -737,3 +737,10 @@ img {
 .input-form:focus ~ svg {
   fill: #4d5ae5;
 }
+.textarea-form {
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
