--- a/css/styles.css
+++ b/css/styles.css
@@ -743,4 +743,8 @@ img {
   padding: 8px 16px;
   outline: transparent;
   border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea-form:focus {
+  border-color: #4d5ae5;
 }
