--- a/css/styles.css
+++ b/css/styles.css
@@ -758,7 +758,16 @@ img {
 .form-contacts-checkbox {
   margin-bottom: 24px;
 }
+.form-custom-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
+}
 
-.input-checkbox {
-  visibility: hidden;
+#user-privacy:checked + .label-chekbox {
 }
