--- a/css/styles.css
+++ b/css/styles.css
@@ -543,6 +543,13 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.input-email-footer::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
 .icon-frame {
   margin-left: 16px;
   fill: white;
@@ -656,7 +663,6 @@ img {
 }
 
 .input-form {
-  margin-bottom: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
@@ -725,7 +731,6 @@ img {
 .input-svg-form {
   fill: #2e2f42;
   position: relative;
-  margin-bottom: 16px;
 }
 
 .input-svg-form svg {
