--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,9 @@ img {
 
 .options {
   border-bottom: 1px solid #e7e9fc;
+  border-left: 1px;
+  border-right: 1px;
+  border-top: none;
   padding: 32px 16px;
 }
 
